# op-rbuilder

./: Cargo.toml  Dockerfile  Dockerfile.xlayer  Makefile  cliff.toml  release-plz.toml  release.toml
.github/workflows/: op_rbuilder_release_candidate.yaml  release-plz.yaml
crates/op-rbuilder/: CHANGELOG.md  Cargo.toml
crates/op-rbuilder/src/: launcher.rs  metrics.rs  monitor_tx_pool.rs  tokio_metrics.rs  traits.rs
crates/op-rbuilder/src/args/: mod.rs  op.rs
crates/op-rbuilder/src/builders/: builder_tx.rs  context.rs  generator.rs  mod.rs
crates/op-rbuilder/src/builders/flashblocks/: best_txs.rs  cache.rs  config.rs  ctx.rs  mod.rs  monitor_xlayer.rs  p2p.rs  payload.rs  payload_handler.rs  service.rs  timing.rs  wspub.rs  wspub_xlayer.rs
crates/op-rbuilder/src/builders/standard/: payload.rs
crates/op-rbuilder/src/flashtestations/: tx_manager.rs
crates/op-rbuilder/src/primitives/: telemetry.rs
crates/op-rbuilder/src/tests/: data_availability.rs  flashblocks.rs  flashtestations.rs  forks.rs  miner_gas_limit.rs  revert.rs  smoke.rs
crates/op-rbuilder/src/tests/framework/: driver.rs  instance.rs  utils.rs
crates/op-rbuilder/src/tests/framework/macros/src/: lib.rs
crates/p2p/: Cargo.toml
crates/p2p/src/: behaviour.rs  lib.rs  outgoing.rs
crates/tdx-quote-provider/: Cargo.toml  Dockerfile
docs/: flashblocks.md
